Fix safari highlight overflow

--- a/components/highlight/index.css
+++ b/components/highlight/index.css
@@ -7,7 +7,12 @@
   margin: 0 0.2em;
 }
 
+/**
+ * 1. Safari requires the variable to be defined before being used
+ */
+
 .Highlight-text {
+  --background-color: rgb(var(--current-background)); /* 1 */
   display: inline;
   padding: 0.15em 0 0.1em;
   font-family: var(--heading-font-family);
@@ -18,6 +23,6 @@
   color: rgb(255, 255, 255);
   line-height: 1.1;
   box-shadow:
-    -0.2em 0 0 rgb(var(--current-background)),
-    0.2em 0 0 rgb(var(--current-background));
+    -0.2em 0 0 var(--background-color),
+    0.2em 0 0 var(--background-color);
 }
